--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <title>Parcel Sandbox</title>
     <meta charset="UTF-8" />
   </head>
-  <p>テスト</p>
 
   <body>
-    <div id="app"></div>
+    <div></div>
+    <div></div>
+    <div></div>
 
     <script src="src/index.js"></script>
   </body>
