マークアップ完了

--- a/index.html
+++ b/index.html
@@ -7,16 +7,16 @@
 
   <body>
     <!-- 入力エリア -->
-    <div>
+    <div class="input-area">
       <input placeholder="ToDoを入力" />
       <button>追加</button>
     </div>
     <!-- 未完了エリア -->
-    <div>
-      <p>未完了のToDo</p>
+    <div class="incomplete-area">
+      <p class="title">未完了のToDo</p>
       <ul>
         <li>
-          <div>
+          <div class="list-row">
             <p>ToDoです</p>
             <button>完了</button>
             <button>削除</button>
@@ -25,11 +25,11 @@
       </ul>
     </div>
     <!-- 完了エリア -->
-    <div>
-      <p>完了したToDo</p>
+    <div class="complete-area">
+      <p class="title">完了したToDo</p>
       <ul>
         <li>
-          <div>
+          <div class="list-row">
             <p>ToDoでした</p>
             <button>戻す</button>
           </div>
