タスクの追加機能

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   <body>
     <!-- 入力エリア -->
     <div class="input-area">
-      <input placeholder="ToDoを入力" />
-      <button>追加</button>
+      <input id="add-text" placeholder="ToDoを入力" />
+      <button id="add-button">追加</button>
     </div>
     <!-- 未完了エリア -->
     <div class="incomplete-area">
