テキスト追加機能

--- a/index.html
+++ b/index.html
@@ -14,14 +14,17 @@
     <!-- 未完了エリア -->
     <div class="incomplete-area">
       <p class="title">未完了のToDo</p>
-      <ul>
-        <li>
-          <div class="list-row">
-            <p>ToDoです</p>
-            <button>完了</button>
-            <button>削除</button>
-          </div>
-        </li>
+      <ul id="incomplete-list">
+        <div class="list-row">
+          <li>ToDoです</li>
+          <button>完了</button>
+          <button>削除</button>
+        </div>
+        <div class="list-row">
+          <li>ToDoです</li>
+          <button>完了</button>
+          <button>削除</button>
+        </div>
       </ul>
     </div>
     <!-- 完了エリア -->
