タスク完了機能

--- a/index.html
+++ b/index.html
@@ -30,13 +30,11 @@
     <!-- 完了エリア -->
     <div class="complete-area">
       <p class="title">完了したToDo</p>
-      <ul>
-        <li>
-          <div class="list-row">
-            <p>ToDoでした</p>
-            <button>戻す</button>
-          </div>
-        </li>
+      <ul id="complete-list">
+        <div class="list-row">
+          <li>ToDoでした</li>
+          <button>戻す</button>
+        </div>
       </ul>
     </div>
     <script src="src/index.js"></script>
