--- a/index.html
+++ b/index.html
@@ -14,28 +14,12 @@
     <!-- 未完了エリア -->
     <div class="incomplete-area">
       <p class="title">未完了のToDo</p>
-      <ul id="incomplete-list">
-        <div class="list-row">
-          <li>ToDoです</li>
-          <button>完了</button>
-          <button>削除</button>
-        </div>
-        <div class="list-row">
-          <li>ToDoです</li>
-          <button>完了</button>
-          <button>削除</button>
-        </div>
-      </ul>
+      <ul id="incomplete-list"></ul>
     </div>
     <!-- 完了エリア -->
     <div class="complete-area">
       <p class="title">完了したToDo</p>
-      <ul id="complete-list">
-        <div class="list-row">
-          <li>ToDoでした</li>
-          <button>戻す</button>
-        </div>
-      </ul>
+      <ul id="complete-list"></ul>
     </div>
     <script src="src/index.js"></script>
   </body>
